# DSearch

./: .gitignore  AUDIT.md  Cargo.toml  README.md  ROADMAP.md  test_phase1.ps1  test_phase2.ps1  test_phase3.ps1  test_phase4.ps1  test_phase5.ps1  test_phase6.ps1  test_phase7.ps1  test_phase8.ps1  test_phase9.ps1
assets/: icon.icns
src/: main.rs  model.rs  sanitize.rs
src/api/: gateway.rs  gateway_keys.rs  handlers.rs  local.rs  mod.rs  openapi.rs  request.rs  response.rs
src/bootstrap/: defaults.rs  mod.rs  resolver.rs
src/cli/: api_client.rs  cmd.rs  mod.rs
src/config/: migrations.rs  mod.rs
src/doctor/: mod.rs
src/node/: announce.rs  autonat.rs  dht.rs  mod.rs  relay.rs  roles.rs  server.rs  stun.rs
src/proto/: cert.rs  frame.rs  mod.rs  msg_type.rs
src/scraper/: discovery.rs  job.rs  mod.rs  replicate.rs  sandbox.rs  scheduler.rs
src/scraper/discovery/: api.rs  html_scrape.rs  providers.rs
src/search/: cache.rs  mod.rs  query.rs
src/service/: install.rs  mod.rs  status.rs
src/storage/: expiry.rs  index.rs  migrations.rs  mod.rs  quota.rs  records.rs  tier2_limiter.rs
src/trust/: mod.rs  pow.rs  reputation.rs  sign.rs  verify.rs
src/ui/: async_api.rs  bootstrap_panel.rs  mod.rs  onboarding.rs  search.rs  settings.rs  tray.rs
